--- a/wiki/commonwiki.css
+++ b/wiki/commonwiki.css
@@ -1,18 +1,7 @@
 /* for shit like bg color. can be temporary, depending on what we want*/
-@font-face {
-    font-family: Uchen-Regular, serif;
-    src: url(../assets/Fonts/Uchen-Regular.ttf) format(truetype);
-    src: url(../assets/Fonts/Uchen-Regular.eot);
-    src: url(../assets/Fonts/Uchen-Regular.woff2) format(woff2),
-         url(../assets/Fonts/Uchen-Regular.woff) format(woff),
-         url(../assets/Fonts/Uchen-Regular.svg) format(svg);
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
 
 body,head {
-    font-family: Uchen-Regular, serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: rgb(26, 26, 26);
     color: whitesmoke;
 }
@@ -46,7 +35,7 @@ th,td {
     position: relative;
     word-wrap: break-word;
     line-height: 1.5;
-    font-size: 0.9em;
+    font-size: 1em;
 }
 .toctitle {
     border-bottom: 1px solid #a2a9b1;
