Added comments to the code of the gronckle page, and made a Templates folder for item and dragon page templates

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -1,25 +1,33 @@
+<!-- Required for every page-->
+<!DOCTYPE html>
 <html lang="en">
-    <style>
-    </style>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../wiki/commonwiki.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
         <title>Gronckle - How to Own a Dragon</title>
+    <!-- External CSS file(s)-->
+        <link rel="stylesheet" href="/Wiki/commonwiki.css">
+    <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
+        <script src="../../../lang-loader.js"></script>
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
+<!-- End of required stuff for every page-->
+
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
 
         <div class="content">
-            <div><h1>Gronckle</h1></div>
 
+            <div><h1>Gronckle</h1></div>
             <p>
-                <i><b>The Gronckle</b></i> is a <b>Medium-sized 
+                <i><b>The Gronckle</b></i> is a <b>medium-sized 
                 <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
                 in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
             </p>
 
-            <div class="toc">
+            <div class="toc"> <!-- Table of Contents -->
                 <div class="toctitle"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
                     <li><a href="#Spawning">Spawning</a>
                         <ul class="tocsublist">
@@ -46,7 +54,7 @@
                     </tr>
 
                     <tr>
-                        <th style="text-align: center"><img alt="Purple Gronckle with a saddle" src="INSERT SOURCE IMAGE" width="300" height="203"></th>
+                        <th style="text-align: center"><img alt="TEXT DISPLAYED WHEN HOVERING OVER THE IMAGE" src="INSERT SOURCE IMAGE" width="300" height="203"></th>
                     </tr>
 
                     <tr>
@@ -59,18 +67,18 @@
 
                     <tr>
                         <td><b>Colors:</b>
-                            <ul>
+                            <ul> <!-- Every possible color of the dragon in the mod-->
                                 <li><b>Blue</b></li>
                                 <li><b>Orange</b></li>
                                 <li><b>Purple</b></li>
-                                <li><b>Brown</b></li>
+                                <li><b>Brown (doesn't spawn naturally)</b></li>
                             </ul>
                         </td>
                     </tr>
 
                     <tr>
                         <td><b>Size:</b>
-                            <ul>
+                            <ul> <!-- Size measured in BlockBench -->
                                 <li><b>Length: 3.7 Blocks</b></li>
                                 <li><b>Width: 2 Blocks</b></li>
                                 <li><b>Height: 2.2 Blocks</b></li>
@@ -79,13 +87,13 @@
                         </td>
                     </tr>
 
-                    <tr>
+                    <tr> <!-- Hitbox taken from MCreator entity file-->
                         <td><b>Hitboxes: 2 x 2 x 2 Blocks</b></td>
                     </tr>
 
                     <tr>
                         <td><b>Preferred Food:</b>
-                            <ul>
+                            <ul>    <!-- Food to give for either Breeding or Growing-->
                                 <li><b>Stone</b></li>
                                 <li><b>Deepslate</b></li>
                                 <li><b>Cobblestone</b></li>
@@ -102,7 +110,7 @@
 
                     <tr>
                         <td><b>Spawn Biomes:</b>
-                            <ul>
+                            <ul> <!-- Every possible biome the dragon can spawn in, with a link to the MC wiki page of said biome -->
                                 <li><b><a rel="nofollow"href="https://minecraft.wiki/w/Plains">Plains</a></b></li>
                                 <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Plains#Sunflower_Plains">Sunflower Plains</a></b></li>
                                 <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Snowy_Plains">Snowy Plains</a></b></li>
@@ -116,26 +124,31 @@
                             </ul>
                         </td>
                     </tr>
-    <tr>
-    <td><b>Tameble:</b> <b>Yes</b>
-    </td></tr>
-    <tr>
-    <td style="text-align: center">
-    <h2><span><b>Known Dragons</b></span></h2>
-    </td></tr>
-    <tr>
-    <td>
-    <ul><li>Meatlug</li>
-    <li>Shattermaster</li>
-    <li>Fishmeat</li></ul>
-    </td></tr>
+                    <tr>
+                        <td>
+                            <b>Tameble:</b> <b>Yes</b>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center">
+                            <h2><span><b>Known Dragons</b></span></h2>
+                        </td>
+                    </tr>
+                    <tr> 
+                        <td>
+                            <ul> <!-- All Known Dragons of this seen in the movies & shows -->
+                                <li>Meatlug</li>
+                                <li>Shattermaster</li>
+                                <li>Fishmeat</li>
+                            </ul>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
             <h2><span>Spawning</span></h2>
-                    <p>The Gronckle is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:
-                    </p>
-                    <ul>
+                <p>The Gronckle is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:</p>
+                    <ul> <!-- List of all the possible biomes this dragon can spawn in -->
                         <li>Plains</li>
                         <li>Sunflower Plains</li>
                         <li>Snowy Plains</li>
@@ -149,16 +162,17 @@
                     </ul>
                 <h3><span>Colors</span></h3>
                     <p>The Gronckle can spawn in a variety of different colors, including:</p>
-                    <ul>
+                    <ul> <!-- List of every possible color of the dragon in the mod -->
                         <li>Blue</li>
                         <li>Orange</li>
                         <li>Purple</li>
                         <li>Brown (Doesn't spawn naturally, will be elaborated on later in the development)</li>
                     </ul>
                     <p>The pictures of these versions can be found in the gallery at the bottom of this page</p>
+
                 <h3><span>Drops</span></h3>
                     <p>When killed, the Gronckle drops scales depending on their current growth stage.</p>
-                    <table class="wikitable">
+                    <table class="wikitable"> <!-- Amount of Scales dropped per growth stage in ratio and percentage -->
                         <tr>
                             <th>Stage</th>
                             <th>Amount of scales dropped:</th>
@@ -187,7 +201,7 @@
 
             <h3><span>Taming & Riding</span></h3>
                 <p>To tame a Gronckle, right-click the Gronckle a couple of times with one of the following items:</p>
-                <ul>
+                <ul> <!-- List of all possible items to give this dragon in order to tame it -->
                     <li>Stone</li>
                     <li>Cobblestone</li>
                     <li>Deepslate</li>
@@ -212,7 +226,7 @@
                     Luckily the male won't have a cooldown at all.
                 </p>
                 <p>Breed items:</p>
-                    <ul>
+                    <ul> <!-- List of all possible items to give this dragon in order for it to breed -->
                         <li>Stone</li>
                         <li>Cobblestone</li>
                         <li>Deepslate</li>
@@ -232,7 +246,7 @@
                     the next stage will spawn pre-tamed by the person that fed them the item.
                 </p>
                 <p>Possible items to give the Gronckle to grow up when prompted:</p>
-                    <ul>
+                    <ul> <!-- List of all possible items this dragon can ask for when it can advance a stage in growing-->
                         <li>Stone</li>
                         <li>Cobblestone</li>
                         <li>Deepslate</li>
@@ -314,3 +328,5 @@
                 </div>
         </div>
     </body>
+</html>
+    
