Made the dragon page template easier to fill out

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>Gronckle - How to Own a Dragon</title>
+        <title>DRAGON NAME - How to Own a Dragon</title>
     <!-- External CSS file(s)-->
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
     <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
@@ -18,10 +18,10 @@
 
         <div class="content">
 
-            <div><h1>Gronckle</h1></div>
+            <div><h1>DRAGON NAME</h1></div>
             <p>
-                <i><b>The Gronckle</b></i> is a <b>medium-sized 
-                <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
+                <i><b>The DRAGON NAME</b></i> is a <b>SIZE-sized 
+                <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">CLASS Class dragon</a></b> that appears
                 in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
@@ -147,7 +147,7 @@
             </table>
 
             <h2><span>Spawning</span></h2>
-                <p>The Gronckle is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:</p>
+                <p>The DRAGON NAME is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:</p>
                     <ul> <!-- List of all the possible biomes this dragon can spawn in -->
                         <li>Plains</li>
                         <li>Sunflower Plains</li>
@@ -161,7 +161,7 @@
                         <li>Grove</li>
                     </ul>
                 <h3><span>Colors</span></h3>
-                    <p>The Gronckle can spawn in a variety of different colors, including:</p>
+                    <p>The DRAGON NAME can spawn in a variety of different colors, including:</p>
                     <ul> <!-- List of every possible color of the dragon in the mod -->
                         <li>Blue</li>
                         <li>Orange</li>
@@ -171,7 +171,7 @@
                     <p>The pictures of these versions can be found in the gallery at the bottom of this page</p>
 
                 <h3><span>Drops</span></h3>
-                    <p>When killed, the Gronckle drops scales depending on their current growth stage.</p>
+                    <p>When killed, the DRAGON NAME drops scales depending on their current growth stage.</p>
                     <table class="wikitable"> <!-- Amount of Scales dropped per growth stage in ratio and percentage -->
                         <tr>
                             <th>Stage</th>
@@ -196,11 +196,11 @@
                     </table>
 
             <h2><span>Behaviour</span></h2>
-                <p>Gronckles are quite peaceful in general. They just wander around in groups, doing nothing. </p>
+                <p>DRAGON NAMEs are quite peaceful in general. They just wander around in groups, doing nothing. </p>
                 <p>Their behaviour will be expanded on in a later update.</p>
 
             <h3><span>Taming & Riding</span></h3>
-                <p>To tame a Gronckle, right-click the Gronckle a couple of times with one of the following items:</p>
+                <p>To tame a DRAGON NAME, right-click the DRAGON NAME a couple of times with one of the following items:</p>
                 <ul> <!-- List of all possible items to give this dragon in order to tame it -->
                     <li>Stone</li>
                     <li>Cobblestone</li>
@@ -213,17 +213,17 @@
                     <li>Cod</li>
                     <li>Salmon</li>
                 </ul>
-                <p>Then, if tamed, Right-click the Gronckle with an empty hand to ride it.</p>
-                <p>Note that you do not need a saddle to ride and control the Gronckle. It is completely optional and so far 
+                <p>Then, if tamed, Right-click the DRAGON NAME with an empty hand to ride it.</p>
+                <p>Note that you do not need a saddle to ride and control the DRAGON NAME. It is completely optional and so far 
                     completely cosmetic.
                 </p>
             <h3><span>Breeding & Growing</span></h3>
-                <p>To breed a Gronckle, use one of the following items on a male and female Gronckle and they'll create an egg. 
-                    Put this egg into an Incubator, wait 30 seconds and then put a lava bucket in the bottom slot 
+                <p>To breed a DRAGON NAME, use one of the following items on a male and female DRAGON NAME and they'll create an egg. 
+                    Put this egg into an Incubator, wait 30 seconds and then put INCUBATOR EXTRA ITEM in the bottom slot 
                     (the egg does not have to be taken out of the incubator) and click the "Hatch" button.
                 </p>
-                <p>After a Gronckle laid an egg the Female will have a cooldown of 30 seconds. 
-                    Luckily the male won't have a cooldown at all.
+                <p>After a DRAGON NAME has laid an egg, the Female will have a cooldown of 30 seconds. 
+                    The male won't have a cooldown at all.
                 </p>
                 <p>Breed items:</p>
                     <ul> <!-- List of all possible items to give this dragon in order for it to breed -->
@@ -236,16 +236,16 @@
                         <li>Granite</li>
                         <li>Sandstone<br></li>
                     </ul>
-                <p> When a Gronckle egg hatches, a Baby Gronckle spawns. 
+                <p> When a DRAGON NAME egg hatches, a Baby DRAGON NAME spawns. 
                     The baby has a 50/50 chance to be either Male or Female, and a 50/50 chance to have the color of either parent. 
                     It will automatically be tamed by the person that hatched the egg.
                 </p>
-                <p>The Gronckle has 4 Stages, Baby, Juvenile, Adolescent and Fully Grown. 
+                <p>The DRAGON NAME has 4 Stages, Baby, Juvenile, Adolescent and Fully Grown. 
                     Every stage can take around 30 seconds to 2.5 minutes. At the end of every stage, 
-                    the Gronckle will ask for one of the items below. After you give the correct item to the Gronckle, 
+                    the DRAGON NAME will ask for one of the items below. After you give the correct item to the DRAGON NAME, 
                     the next stage will spawn pre-tamed by the person that fed them the item.
                 </p>
-                <p>Possible items to give the Gronckle to grow up when prompted:</p>
+                <p>Possible items to give the DRAGON NAME to grow up when prompted:</p>
                     <ul> <!-- List of all possible items this dragon can ask for when it can advance a stage in growing-->
                         <li>Stone</li>
                         <li>Cobblestone</li>
@@ -259,9 +259,9 @@
                         <li>Iron Ingot</li>
                     </ul>
             <h2><span>Abilities</span></h2>
-                <p>The Gronckle has (as of alpha 0.0.6) only one ability, which is to fire a Fireball from it's mouth 
+                <p>The DRAGON NAME has (as of alpha 0.0.6) only one ability, which is to fire a Fireball from it's mouth 
                     by pressing the ability keybind (R by default). 
-                    This can be done up to 6 times in a row, after which the Gronckle needs to "rest" for five minutes 
+                    This can be done up to 6 times in a row, after which the DRAGON NAME needs to "rest" for five minutes 
                     before it can fire again.
                 </p>
 
