Added some more Comments to Template and Gronckle page

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -19,7 +19,7 @@
         <div class="content">
 
             <div><h1>DRAGON NAME</h1></div>
-            <p>
+            <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The DRAGON NAME</b></i> is a <b>SIZE-sized 
                 <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">CLASS Class dragon</a></b> that appears
                 in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
