--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>DRAGON NAME - How to Own a Dragon</title>
+        <title>DRAGON NAME - How to Own a Dragon Wiki</title>
     <!-- External CSS file(s)-->
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
     <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
