Fixed wiki redirect button & added js file for toc

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
         <title>DRAGON NAME - How to Own a Dragon Wiki</title>
-    <!-- External CSS file(s)-->
+    <!-- External CSS file(s) & JS Scripts-->
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
-    <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
+        <script src="/Wiki/toc.js"></script>
         <script src="../../../lang-loader.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
@@ -27,24 +27,7 @@
                 The subjects covered by this page are:
             </p>
 
-            <div class="toc"> <!-- Table of Contents -->
-                <div class="toctitle"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
-                    <li><a href="#Spawning">Spawning</a>
-                        <ul class="tocsublist">
-                            <li><a href="#Colors">Colors</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#Behaviour">Behaviour</a>
-                        <ul class="tocsublist">
-                            <li><a href="#Taming_&_Riding">Taming & Riding</a>
-                            <li><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
-                            <li><a href="#Abilities">Abilities</a></li>
-                            <li><a href="#Drops">Drops</a></li>
-                        </ul>
-                    </li>
-
-                    <li><a href="#Gallery">Gallery</a></li>
-                    <li><a href="#History">History</a></li>
+            <div class="toc">
             </div>
     
             <table class="infotable">
@@ -66,7 +49,7 @@
                     </tr>
 
                     <tr>
-                        <td><b>Colors:</b>
+                        <td><b>Variants:</b>
                             <ul> <!-- Every possible color of the dragon in the mod-->
                                 <li><b>Blue</b></li>
                                 <li><b>Orange</b></li>
@@ -160,8 +143,8 @@
                         <li>Stony Shore</li>
                         <li>Grove</li>
                     </ul>
-                <h3><span>Colors</span></h3>
-                    <p>The DRAGON NAME can spawn in a variety of different colors, including:</p>
+                <h3><span>Variants</span></h3>
+                    <p>The DRAGON NAME can spawn in a variety of variants, including:</p>
                     <ul> <!-- List of every possible color of the dragon in the mod -->
                         <li>Blue</li>
                         <li>Orange</li>
