Fixed TOC and added a notoc class for headers (see toc.js comments for explanation)

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -41,7 +41,7 @@
                     </tr>
 
                     <tr>
-                        <td style="text-align: center"><h2 style="line-height: 0px;"><span><b>Information</b></span></h2></td>
+                        <td style="text-align: center"><h2 class="notoc" style="line-height: 0px;"><span><b>Information</b></span></h2></td>
                     </tr>
 
                     <tr>
@@ -114,7 +114,7 @@
                     </tr>
                     <tr>
                         <td style="text-align: center">
-                            <h2><span><b>Known Dragons</b></span></h2>
+                            <h2 class="notoc"><span><b>Known Dragons</b></span></h2>
                         </td>
                     </tr>
                     <tr> 
