--- a/Wiki/commonwiki.css
+++ b/Wiki/commonwiki.css
@@ -53,7 +53,8 @@ th,td {
 .toctitle {
     border-bottom: 1px solid #a2a9b1;
 }
-.tocsublist {
-    padding-top: 0;
-    line-height: 1.1;
+.toc-item-l1 {
+    border:none;
+    font-size: 14pt;
+    text-decoration: none;
 }
