--- a/Wiki/commonwiki.css
+++ b/Wiki/commonwiki.css
@@ -41,20 +41,40 @@ th,td {
     padding: 0.2em 0.4em;
 }
 
+.hidden {
+    display: none;
+}
+.toc-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    border-bottom: #a2a9b1 1px solid;
+    padding: 5px;
+}
 .toc {
     display:table;
     padding: 7px;
+    padding-top: 5px;
     border: 1px solid #a2a9b1;
     position: relative;
     word-wrap: break-word;
     line-height: 1.3;
     font-size: 1em;
+    text-align: center;
 }
-.toctitle {
-    border-bottom: 1px solid #a2a9b1;
+.toc-link {
+    text-align: center;
+    text-decoration: none;
+    color:white;
 }
 .toc-item-l1 {
+    text-align: center;
     border:none;
-    font-size: 14pt;
-    text-decoration: none;
+    font-size: 16pt;
+    border-bottom: 1px solid #a2a9b1;
+}
+.toc-item-l2 {
+    text-align: center;
+    border:none;
+    font-size: 12pt;
+    border-bottom: 1px solid #a2a9b1;
 }
