--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
         <script src="../../../lang-loader.js"></script>
+        <script src="/Wiki/redirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
 <!-- End of required stuff for every page-->
