--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
         <script src="../../../lang-loader.js"></script>
-        <script src="/Wiki/redirects.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
 <!-- End of required stuff for every page-->
@@ -22,7 +22,7 @@
             <div><h1>DRAGON NAME</h1></div>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The DRAGON NAME</b></i> is a <b>SIZE-sized 
-                <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">CLASS Class dragon</a></b> that appears
+                <a class="redirect" onclick="RedirectToBoulderClass()">CLASS Class dragon</a></b> that appears
                 in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
